[package]
name = "aoc2020"
version = "0.1.0"
authors = ["ricky26"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
nom = "6.0.1"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.60"
